[gd_scene load_steps=12 format=3 uid="uid://bqset71wepld7"]

[ext_resource type="Script" uid="uid://dt6d00ejr7wdt" path="res://scenes/characters/enemies/generic_enemy.gd" id="1_ad4gc"]
[ext_resource type="Texture2D" uid="uid://3wmc6ar21bdh" path="res://assets/game/Characters/enemy.png" id="2_ad4gc"]
[ext_resource type="PackedScene" uid="uid://cbeq6vu2e8eg6" path="res://scenes/components/hurt_component.tscn" id="3_k2axd"]
[ext_resource type="PackedScene" uid="uid://hsckm1udb2ko" path="res://scenes/ui/entity_health_bar.tscn" id="4_f6can"]
[ext_resource type="PackedScene" uid="uid://ncvpnwwp3euh" path="res://scenes/components/health_component.tscn" id="5_l1d30"]
[ext_resource type="PackedScene" uid="uid://5mxxiib54rgp" path="res://scenes/components/attack_component.tscn" id="6_po8c6"]
[ext_resource type="PackedScene" uid="uid://xbyhnwf6230p" path="res://scenes/components/navigation_component.tscn" id="7_k2axd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_po8c6"]
size = Vector2(20, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2axd"]
size = Vector2(20, 43)

[sub_resource type="CircleShape2D" id="CircleShape2D_po8c6"]
radius = 41.3038

[sub_resource type="CircleShape2D" id="CircleShape2D_k2axd"]
radius = 27.1662

[node name="GenericEnemy" type="CharacterBody2D"]
collision_layer = 512
collision_mask = 3
script = ExtResource("1_ad4gc")
hurted_by = 1
entity_max_health = 4
entity_starting_health = 9
drop_id = &"100"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ad4gc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_po8c6")
debug_color = Color(0.726211, 0.11871, 0.291988, 0.42)

[node name="HurtComponent" parent="." instance=ExtResource("3_k2axd")]
tool = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_k2axd")
debug_color = Color(0.441317, 0.425986, 0.577396, 0.42)

[node name="EntityHealthBar" parent="." instance=ExtResource("4_f6can")]
offset_left = -32.0
offset_top = -35.0
offset_right = 32.0
offset_bottom = -26.0
value = 61.0
nine_patch_stretch = true

[node name="HealthComponent" parent="." instance=ExtResource("5_l1d30")]

[node name="AttackComponent" parent="." instance=ExtResource("6_po8c6")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
shape = SubResource("CircleShape2D_po8c6")

[node name="NavigationComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("7_k2axd")]
entity = NodePath("..")

[node name="AttackRange" type="Area2D" parent="."]
collision_mask = 514

[node name="AttackRangeCollision" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_k2axd")
debug_color = Color(0.644203, 0.510921, 0.314539, 0.42)

[connection signal="damage_range" from="AttackComponent" to="." method="_on_attack_component_damage_range"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
